word count changes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           <span>Email:</span>
           <span id="profile__email"></span>
         </div>
+        <div class="profile-item" id="word-count-container">
+          <span>Word Count in Uploaded file:</span>
+          <span id="word-count">0</span>
+          <span id="profile__email"></span>
+        </div>
       </div>
 
       <form enctype="multipart/form-data" class="profile-form">
